# img_scrap

./: .gitignore  README.md
task1/: main.py  pipeline.jenkinsfile
task1/scrapimg/: scrapimg.py  test_scrapimg.py
task2/: CMakeLists.txt  Dockerfile
task2/MathClient/: CMakeLists.txt
task2/MathLibrary/: CMakeLists.txt
